--- a/chatgpt-jiezi-main/package.json
+++ b/chatgpt-jiezi-main/package.json
@@ -28,6 +28,7 @@
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.28",
+    "react": "^18.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
