--- a/chatgpt-web-java/chatgpt-bootstrap/src/main/resources/application-dev.yaml
+++ b/chatgpt-web-java/chatgpt-bootstrap/src/main/resources/application-dev.yaml
@@ -2,14 +2,17 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${MYSQL_USER_NAME:root}
-    password: ${MYSQL_PASSWORD:123456}
+    password: ${MYSQL_PASSWORD:1234}
     url: ${JDBC_URL:jdbc:mysql://localhost:3306/chat?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true}
 
-#mybatis-plus:
-#  configuration:
+mybatis-plus:
+  configuration:
 #    # 控制台打印 SQL
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+logging:
+  # 日志级别
+  level:
+    root: debug
 chat:
   # OpenAI API Key - https://platform.openai.com/account/api-keys
   openai_api_key: ${CHAT_OPENAI_API_KEY:}
